<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="header_home">Home</string>
    <string name="title_search">Search</string>
    <string name="header_subscriptions">Subscriptions</string>
    <string name="header_history">History</string>
    <string name="header_music">Music</string>
    <string name="header_news">News</string>
    <string name="header_gaming">Gaming</string>
    <string name="header_playlists">Playlists</string>
    <string name="header_settings">Settings</string>
    <string name="header_channels">Channels</string>
    <string name="subscriptions_signin_title">See the latest from channels you love</string>
    <string name="subscriptions_signin_subtitle">Sign in to see your subscriptions</string>
    <string name="subscriptions_signin_button_text">SIGN IN</string>
    <string name="library_signin_to_show_more">Watch videos you liked, saved, or subscribed</string>
    <string name="library_signin_subtitle">Sign in to see your library</string>
    <string name="action_signin">SIGN IN</string>
    <string name="title_video_formats">Video formats</string>
    <string name="title_audio_formats">Audio formats</string>
    <string name="subtitle_category_title">Subtitles</string>
    <string name="playback_queue_category_title">Playback queue</string>
    <string name="video_max_quality">Auto (max quality)</string>
    <string name="audio_max_quality">Auto (max quality)</string>
    <string name="subtitles_disabled">Subtitles disabled</string>
    <string name="auto_frame_rate">Auto Frame Rate</string>
    <string name="frame_rate_correction">Fix fps:\n%s</string>
    <string name="category_background_playback">Background playback</string>
    <string name="not_implemented">Not implemented</string>
    <string name="not_supported_by_device">The device does not support this feature</string>
    <string name="option_background_playback_off">Disabled</string>
    <string name="option_background_playback_pip">Picture in picture</string>
    <string name="option_background_playback_only_audio">Only audio</string>
    <string name="playback_settings">Advanced playback settings</string>
    <string name="video_speed">Video speed</string>
    <string name="resolution_switch">Switch resolution</string>
    <string name="video_buffer">Video buffer</string>
    <string name="video_buffer_size_none">None</string>
    <string name="video_buffer_size_lowest">Lowest</string>
    <string name="video_buffer_size_low">Low</string>
    <string name="video_buffer_size_med">Medium</string>
    <string name="video_buffer_size_high">High</string>
    <string name="video_buffer_size_highest">Highest</string>
    <string name="update_changelog">Changelog</string>
    <string name="install_update">Install update</string>
    <string name="section_is_empty">Oops! There is nothing in here</string>
    <string name="dialog_add_to_playlist">Add/Remove from playlist</string>
    <string name="msg_signed_users_only">Signed users only</string>
    <string name="msg_cant_load_content">Can\'t load content.\n1) Turn on watch history.\n2) Check date and time on the device.\n3) Check network connection.\n4) Check your proxy settings.\n5) Try to sign in to your account.\n6) Maybe there is nothing in here.</string>
    <string name="title_video_presets">Video presets</string>
    <string name="settings_accounts">Accounts</string>
    <string name="settings_left_panel">Edit categories</string>
    <string name="settings_themes">Themes</string>
    <string name="settings_other">Other</string>
    <string name="settings_player">Player</string>
    <string name="settings_language">Language</string>
    <string name="settings_linked_devices">Linked devices</string>
    <string name="settings_about">About</string>
    <string name="dialog_account_list">Select account</string>
    <string name="dialog_account_none">None</string>
    <string name="dialog_remove_account">Sign out</string>
    <string name="dialog_add_account">Sign in</string>
    <string name="default_lang">Default</string>
    <string name="original_lang">Original</string>
    <string name="dialog_select_language">Language</string>
    <string name="subtitle_default">Default</string>
    <string name="subtitle_white_semi_transparent">White on semitransparent background</string>
    <string name="subtitle_style">Subtitle style</string>
    <string name="subtitle_language">Subtitle language</string>
    <string name="action_search">Search</string>
    <string name="settings_main_ui">User interface</string>
    <string name="dialog_main_ui">User interface</string>
    <string name="card_animated_previews">Animated previews</string>
    <string name="web_site">Web site</string>
    <string name="donation">Donation</string>
    <string name="dialog_about">About</string>
    <string name="dialog_player_ui">Video player</string>
    <string name="player_show_ui_on_pause">Show UI on pause</string>
    <string name="player_pause_on_ok">OK key pauses playback</string>
    <string name="player_ok_button_behavior">OK button behavior</string>
    <string name="player_only_ui">Only UI</string>
    <string name="player_ui_and_pause">UI and pause</string>
    <string name="player_only_pause">Only pause</string>
    <string name="player_toggle_speed">Toggle speed on/off</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="update_not_found">You\'re using the latest version</string>
    <string name="update_in_progress">Wait…</string>
    <string name="player_ui_hide_behavior">Auto-hide UI</string>
    <string name="option_never">Never</string>
    <string name="side_panel_sections">Set-up sections</string>
    <string name="boot_to_section">Boot to section</string>
    <string name="large_ui">Large UI</string>
    <string name="video_grid_scale">Video grid scale</string>
    <string name="scale_ui">UI scale</string>
    <string name="color_scheme">Color scheme</string>
    <string name="color_scheme_default">Default</string>
    <string name="color_scheme_red_grey">Red-grey</string>
    <string name="color_scheme_red">Red</string>
    <string name="color_scheme_dark_grey">Dark Grey</string>
    <string name="disable_update_check">Disable update check</string>
    <string name="show_again">Show again</string>
    <string name="check_updates_auto">Notify about updates</string>
    <string name="select_account_on_boot">Show account selection on boot</string>
    <string name="player_other">Misc</string>
    <string name="player_full_date">Precise date in description</string>
    <string name="open_channel">Open channel</string>
    <string name="open_playlist">Open playlist</string>
    <string name="not_interested">Not interested</string>
    <string name="not_recommend_channel">Don\'t recommend channel</string>
    <string name="you_wont_see_this_video">Video has been removed from recommended</string>
    <string name="you_wont_see_this_channel">You won\'t see this channel in recommendations</string>
    <string name="settings_search">Search</string>
    <string name="dialog_search">Search</string>
    <string name="instant_voice_search">Instant voice search</string>
    <string name="option_background_playback_behind">Play behind</string>
    <string name="next_video_info_is_not_loaded_yet">Next video info is not loaded yet</string>
    <string name="card_multiline_title">Multiline titles</string>
    <string name="cards_style">Cards style</string>
    <string name="repeat_mode_all">Play videos continuously</string>
    <string name="repeat_mode_one">Repeat current video</string>
    <string name="repeat_mode_pause">Pause playback after each video (except queue)</string>
    <string name="repeat_mode_pause_alt">Play only playlist videos continuously</string>
    <string name="repeat_mode_none">Stop playback after one video (except queue)</string>
    <string name="subscribed_to_channel">Subscribed</string>
    <string name="unsubscribed_from_channel">Unsubscribed</string>
    <string name="subtitle_yellow_transparent">Yellow on transparent background</string>
    <string name="subtitle_white_transparent">White on transparent background</string>
    <string name="subtitle_white_black">White on black background</string>
    <string name="player_seek_preview">Preview while seeking</string>
    <string name="color_scheme_dark_grey_oled">Dark Grey (OLED)</string>
    <string name="channels_section_sorting">Channels section sorting</string>
    <string name="sorting_by_new_content">New content</string>
    <string name="sorting_alphabetically">Alphabetically</string>
    <string name="sorting_last_viewed">Last viewed</string>
    <string name="player_pause_when_seek">Pause when seeking</string>
    <string name="playlists_style">Playlists section style</string>
    <string name="playlists_style_grid">Grid</string>
    <string name="playlists_style_rows">Rows</string>
    <string name="player_show_clock">Show clock in controls bar</string>
    <string name="player_show_remaining_time">Show remaining time in controls bar</string>
    <string name="player_show_ending_time">Show ending time in controls bar</string>
    <string name="open_channel_uploads">Open channel uploads</string>
    <string name="app_exit_shortcut">Exit from the app</string>
    <string name="player_exit_shortcut">Exit from the player</string>
    <string name="search_exit_shortcut">Exit from the search</string>
    <string name="app_exit_none">Don\'t exit</string>
    <string name="app_double_back_exit">Double back</string>
    <string name="app_single_back_exit">Single back</string>
    <string name="action_video_zoom">Video zoom</string>
    <string name="video_zoom">Video zoom</string>
    <string name="video_zoom_default">Default</string>
    <string name="video_zoom_fit_width">Fit width</string>
    <string name="video_zoom_fit_height">Fit height</string>
    <string name="video_zoom_fit_both">Fit either width or height</string>
    <string name="video_zoom_stretch">Stretch</string>
    <string name="color_scheme_teal">Teal</string>
    <string name="color_scheme_teal_oled">Teal (OLED)</string>
    <string name="player_seek_preview_none">Disabled</string>
    <string name="player_seek_preview_single">Single frame</string>
    <string name="player_seek_preview_carousel">Carousel</string>
    <string name="player_seek_preview_carousel_slow">Carousel (slow, by keyframes)</string>
    <string name="player_seek_preview_carousel_fast">Carousel (fast, not precise preview)</string>
    <string name="unsubscribe_from_channel">Unsubscribe from the channel</string>
    <string name="card_title_lines_num">Card title lines num</string>
    <string name="card_auto_scrolled_title">Auto-scroll cropped title</string>
    <string name="share_link">Share link</string>
    <string name="share_qr_link">Share link (QR code)</string>
    <string name="subscribe_to_channel">Subscribe to the channel</string>
    <string name="wait_data_loading">Please wait while data is loading…</string>
    <string name="auto_frame_rate_pause">Auto Frame Rate (pause when switching)</string>
    <string name="auto_frame_rate_applying">Applying auto frame rate %sx%s\@%s</string>
    <string name="audio_shift">Audio delay</string>
    <string name="player_remember_speed">Remember speed</string>
    <string name="mark_channel_as_watched">Mark as watched</string>
    <string name="channel_marked_as_watched">Channel has been marked as watched</string>
    <string name="vox_proxy_desc">Use a separate proxy only for VOX translation requests. Other SmartTube traffic connects directly.</string>
    <string name="vox_proxy_enable">Enable proxy for VOX</string>
    <string name="vox_proxy_type">Proxy type</string>
    <string name="vox_proxy_host">Host</string>
    <string name="vox_proxy_port">Port</string>
    <string name="vox_proxy_username">Username</string>
    <string name="vox_proxy_password">Password</string>
</resources>